--- a/03codebuild/postman-newman-buildspec.yml
+++ b/03codebuild/postman-newman-buildspec.yml
@@ -22,7 +22,8 @@ phases:
   build:
     commands:
       - echo Build started on `date` from dir `pwd`
-      - newman run PetStoreAPI.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json -r junit
+      - pwd
+      - newman run PetStoreAPI.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json -r junit --verbose
 
 reports:
   JUnitReports: # CodeBuild will create a report group called "SurefireReports".
